# template-connect-integrator

./: Makefile  README.md  charmcraft.yaml  config.yaml  metadata.yaml  metadata.yaml.j2  pyproject.toml  render_config.py  tox.ini
.github/workflows/: .jira_sync_config.yaml  ci.yaml  release.yaml
examples/: mirrormaker.py  mongodb.py  mysql.py  opensearch.py  postgresql.py  s3.py
lib/charms/data_platform_libs/v0/: data_interfaces.py
lib/charms/kafka_connect/v0/: integrator.py
src/: charm.py  integration.py  literals.py  models.py  workload.py
src/rest/: entrypoint.py
src/rest/app/: __init__.py
src/rest/app/apis/v1/: __init__.py  healthcheck.py  plugin.py
src/rest/app/core/: config.py  middlewares.py  models.py
src/rest/app/services/: plugin.py
tests/integration/: conftest.py  helpers.py  test_charm.py  test_mirrormaker.py  test_mongodb.py  test_mysql.py  test_opensearch.py  test_postgresql.py  test_s3.py
tests/unit/: conftest.py  test_charm.py
tests/unit/test-charm/: metadata.yaml
